--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "spinners-react": "^1.0.7",
