--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
 PORT=5000
 NODE_ENV=development
-DB_HOST=localhost
-MONGODB_URI='mongodb://127.0.0.1:27017/urban'
+MONGODB_URI='mongodb+srv://victorystefanov:SfSNCb9DRxg5bj1K@cluster0.fuisaow.mongodb.net/'
 
 # MONGODB_URI='mongodb://mongo:ED24d-GdbDbh6Agg1fccc4-BgdD6G-DH@viaduct.proxy.rlwy.net:13926';
 # // const imageUrl = `https://urban-tattoo-server-production.up.railway.app/${imageName}`;
