--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=5000
 NODE_ENV=development
 MONGODB_URI='mongodb+srv://victorystefanov:SfSNCb9DRxg5bj1K@cluster0.fuisaow.mongodb.net/'
+SECRET=m0sTD@ng3rouSPa$$worD1995
 
 # MONGODB_URI='mongodb://mongo:ED24d-GdbDbh6Agg1fccc4-BgdD6G-DH@viaduct.proxy.rlwy.net:13926';
 # // const imageUrl = `https://urban-tattoo-server-production.up.railway.app/${imageName}`;
