--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.4.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.8"
+    "mongoose": "^7.6.8",
+    "sharp": "^0.33.2"
   }
 }
