--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,12 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^7.0.1",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.8",
-    "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.2"
   }
 }
